<resources>
    <string name="app_name">History</string>

    <string name="personal_information">个人资料</string>
    <string name="following">关注</string>
    <string name="book_mark">书签</string>
    <string name="knowledge">知识库</string>

    <string name="night_mode">夜间模式</string>
    <string name="qr_code">二维码</string>
    <string name="setting">设置与隐私</string>
    <string name="help_center">帮助中心</string>

    <string name="create_new_account">创建新账号</string>
    <string name="add_exist_account">添加已有账号</string>

    <string name="encyclopedia">百科</string>
    <string name="forum">论坛</string>
    <string name="timeline">时间轴</string>
    <string name="search">查找</string>


    <string name="what_is_phone">你的手机号码是什么？</string>
    <string name="what_is_email">你的邮箱地址是什么？</string>
    <string name="phone_declare">不用担心，我们绝不会公开显示你的手机号码。</string>
    <string name="email_declare">我们不会向你发送垃圾邮件。</string>
    <string name="use_phone_num">使用手机号码注册</string>
    <string name="use_email">使用邮箱注册</string>
    <string name="email_hint">邮箱地址</string>
    <string name="phone_hint">手机号码</string>
    <string name="next_step">下一步</string>
    <string name="what_is_name">你好! 请问你叫什么名字？</string>
    <string name="username_hint">用户名</string>

    <string name="verification_text">我们已经向你发送验证码。</string>
    <string name="verification_declare">请在下方输入以验证</string>
    <string name="not_receive_message">未收到短信？</string>

    <string name="password_text">你还需要设置一个密码。</string>
    <string name="password_declare">请保证至少有8个字符。</string>
    <string name="password_hint">密码</string>

    <string name="login_text">登陆History。</string>
    <string name="login_hint">手机号码或邮箱地址</string>
    <string name="forget_password">忘记密码？</string>
    <string name="login">登陆</string>
    <string name="sign_up">注册</string>
    <string name="login_failed">登陆失败！请检查账号或密码是否正确。</string>

    <string name="valid_id">请输入有效的手机号码或邮箱地址</string>
    <string name="valid_password">请输入有效的密码</string>

    <string name="save_success">保存成功</string>
    <string name="find_account_text">找到你的History账号</string>
    <string name="find_input_text">请输入你的手机号码或email</string>

    <string name="check_email_text">检查你的邮箱</string>
    <string name="check_email_information">我们已经向xxx发送了一封邮件。点击邮件中的连接以重置你的密码。
    如果没有看到该邮件，请检查可能出现的其他位置，如垃圾邮件等。</string>
    <string name="not_receive_email">未收到邮件？</string>

    <string name="search_hint">将搜索用户，社区和百科</string>
</resources>
