<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/context_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:fontFamily="serif"
        android:text="@string/check_email_text"
        android:textSize="26dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/declare_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="serif"
        android:text="@string/check_email_information"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/email_receive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_margin="10dp"
        android:text="@string/not_receive_email"
        android:textColor="@color/historyDarkBrown"
        android:textSize="20sp" />

</RelativeLayout>


