<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/context_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:fontFamily="serif"
        android:text="@string/what_is_phone"
        android:textSize="26dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/declare_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="95dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="serif"
        android:text="@string/phone_declare"
        android:textSize="16dp"/>

    <!-- Name Label -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/contact_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="140dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/contact_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>



    <TextView
        android:id="@+id/contact_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_margin="10dp"
        android:text="@string/use_email"
        android:textColor="@color/history"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_sign_up"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:clickable="false"
        android:textSize="20sp" />


</RelativeLayout>
