<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/context_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:fontFamily="serif"
        android:text="@string/verification_text"
        android:textSize="26dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/declare_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="95dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="serif"
        android:text="@string/verification_declare"
        android:textSize="16dp"/>

    <!-- Name Label -->
    <com.jkb.vcedittext.VerificationCodeEditText
        android:id="@+id/verificationCodeInput"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_centerHorizontal="true"
        android:inputType="number"
        android:textSize="20sp"
        app:bottomLineHeight="1dp"
        app:bottomLineNormalColor="@color/gravy_light"
        app:bottomLineSelectedColor="@color/historyDarkBrown"
        app:figures="6"
        app:selectedBackgroundColor="@color/colorPrimary_alpha33"
        app:verCodeMargin="4dp" />



    <TextView
        android:id="@+id/message_receive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_margin="10dp"
        android:text="@string/not_receive_message"
        android:textColor="@color/historyDarkBrown"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_account_shappe"
        android:text="@string/next_step"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:clickable="false"/>


</RelativeLayout>


